---------------------------------------------------------------------------------------------------
Version: 2.14.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.14.0
Date: 2026-02-06
  Bugfixes:
    - Fixed that "Exclude from future blueprints" was not highlighted when using a per-stage override.
  Features:
    - Added "Blueprint exclusion tool" to mark individual entities as excluded from blueprints on a per-stage basis.
---------------------------------------------------------------------------------------------------
Version: 2.13.3
Date: 2026-02-02
  Bugfixes:
    - Fixed that pasting a blueprint with overlapping rails would sometimes not be registered.
---------------------------------------------------------------------------------------------------
Version: 2.13.2
Date: 2026-02-01
  Bugfixes:
    - Fixed that resetting an entity to default control behavior would not affect later stages.
---------------------------------------------------------------------------------------------------
Version: 2.13.1
Date: 2026-02-01
  Bugfixes:
    - Fixed that entities with only item request changes at a stage were excluded from blueprints when using stage limit or "exclude from future blueprints".
---------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: 2026-01-26
  Features:
    - Added "Resync with world" action that reads actual world state into the project, useful for recovering from desync issues.
---------------------------------------------------------------------------------------------------
Version: 2.12.1
Date: 2025-11-30
  Fixes:
    - Fixed that pasting an assembler with modules would break module requests.
---------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: 2025-11-29
  Features: