@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.14.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that movable entities (trains, cars) would be teleported to their position whenever updated.
 ---------------------------------------------------------------------------------------------------
 Version: 2.14.0
 Date: 2026-02-06
